# game-center-cli

./: .gitignore  Cargo.toml  README.md  note.md  server.example.toml
.claude/: settings.json
.claude/hooks/: lint-on-edit.sh
.claude/skills/epic-compact/: SKILL.md
.claude/skills/pre-flight/: SKILL.md
.claude/skills/reviews/: SKILL.md
.claude/skills/teammate/: SKILL.md
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs
crates/client/src/auth/: mod.rs  session.rs
crates/client/src/database/: mod.rs
crates/client/src/net/: client.rs  connection.rs  mod.rs
crates/client/src/tui/: app.rs  event.rs  mod.rs
crates/client/src/tui/render/: blockbreaker.rs  checkers.rs  chess.rs  connect4.rs  mod.rs  snake.rs  terminal_fit.rs  tictactoe.rs
crates/client/src/tui/screens/: lobby.rs  login.rs  room.rs
crates/installer/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  observability.rs
crates/server/src/auth/: jwt.rs  rate_limit.rs
crates/server/src/database/: mod.rs
crates/server/src/engine/: mod.rs  realtime.rs  turn_based.rs
crates/server/src/lobby/: manager.rs  room.rs
crates/server/src/ws/: handler.rs  mod.rs  session.rs  tls.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  i18n.rs  lib.rs  types.rs
crates/shared/src/game/: blockbreaker.rs  checkers.rs  chess.rs  connect4.rs  mod.rs  snake.rs  tictactoe.rs  traits.rs
crates/shared/src/protocol/: codec.rs  messages.rs  mod.rs  version.rs
crates/shared/tests/: regression.rs
i18n/: en.toml  fr.toml
