[package]
name = "gc-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.32"
gc-shared = { version = "0.1.0", path = "../shared" }
ratatui = "0.30.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
webpki-roots = "0.26.1"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
