[package]
name = "gc-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = "0.10.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
